--- a/MarsPathFinder.csproj
+++ b/MarsPathFinder.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CardinalDirection.cs" />
+    <Compile Include="CommandType.cs" />
+    <Compile Include="InputOperations.cs" />
+    <Compile Include="Point.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Robot.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
